about.css
@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");

:root {
  --orange-color: #f79e1b;
  --text-mute: #838383;
  --mute-color: #fef9f6;
  --black-color: #373737;
  --white-color: #ffffff;
  --ff-poppins: "Poppins", sans-serif;
  --ff-inter: "Inter", sans-serif;
}

/* Navbar */
.navbar {
  font-family: var(--ff-poppins);
  font-weight: 500;
  font-size: 16px;
}
.nav-link {
  color: var(--black-color);
}

.sign-up-btn {
  background-color: var(--orange-color);
  border: none;
  color: var(--white-color);
  padding: 11px 21px;
  border-radius: 10px;
}
.navbar-nav {
  display: flex;
  gap: 20px;
}
.navbar-nav a:hover {
  color: var(--orange-color);
}

/* About header */
.about-hero-title {
  font-family: var(--ff-poppins);
  font-weight: 700;
  font-size: 48px;
  color: var(--black-color);
}
.about-hero-text {
  font-family: var(--ff-inter);
  color: var(--text-mute);
  max-width: 550px;
  font-size: 16px;
}
.about-hero-img {
  width: 100%;
  border-radius: 20px;
  object-fit: cover;
}

/* History */
.history-badge {
  display: inline-block;
  font-family: var(--ff-poppins);
  font-size: 14px;
  color: var(--orange-color);
  border: 1px solid var(--orange-color);
  border-radius: 20px;
  padding: 5px 18px;
  margin-bottom: 15px;
}
.history-title {
  font-family: var(--ff-inter);
  font-weight: 600;
  font-size: 50px;
  color: black;
  margin-bottom: 20px;
}

.history-text {
  font-family: var(--ff-inter);
  color: var(--text-mute);
  width: 951px;
  font-size: 18px;
}

.history-div {
  position: relative;
}

.history-div img {
left: -0.5rem;
top: -1.25rem;
position: absolute;
z-index: 2;
}

.value-card {
  position: relative;
  background-color: var(--white-color);
  border: 1px solid #ececec;
  border-radius: 15px;
  padding: 40px 25px 25px;
  text-align: left;
  height: 100%;
}
.value-card-title {
  font-family: var(--ff-poppins);
  font-weight: 600;
  font-size: 20px;
  color: var(--black-color);
  margin-bottom: 12px;
}

.value-card-text {
  font-family: var(--ff-inter);
  color: var(--text-mute);
  font-size: 15px;
}

/* Stats */
.stats-box {
  background-color: var(--mute-color);
  border-radius: 20px;
  padding: 40px 20px;
}
.stats-icon {
  width: 50px;
  height: 50px;
  margin-bottom: 1rem;
}

.stats-number {
  font-family: var(--ff-inter);
  font-weight: 600;
  font-size: 40px;
  color: var(--black-color);
  display: inline-block;
}

#stats-h3 {
  font-size: 39px;
}
.stats-label {
  font-family: var(--ff-inter);
  color: var(--text-mute);
  font-size: 15px;
}

/* Team */
.team-section {
  background-color: rgba(254, 249, 246, 1);
}
.team-title {
  font-family: var(--ff-poppins);
  font-weight: 700;
  font-size: 40px;
  color: var(--black-color);
}
.team-text {
  font-family: var(--ff-inter);
  color: var(--text-mute);
  max-width: 750px;
  font-size: 16px;
  margin-bottom: 10px;
}
.team-card {
  text-align: left;
}
.team-img {
  width: 100%;
  aspect-ratio: 1 / 1;
  object-fit: cover;
  border-radius: 12px;
  margin-bottom: 15px;
}
.team-name {
  font-family: var(--ff-inter);
  font-weight: 400;
  font-size: 28px;
  color: var(--black-color);
  margin-bottom: 2px;
}
.team-role {
  font-family: var(--ff-inter);
  color: var(--text-mute);
  font-size: 14px;
}

/* tablet screen */
@media (min-width: 768px) and (max-width: 991px) {
  /* Navbar */
  .navbar-nav {
    gap: 5px;
  }
  .navbar-nav a:hover {
    color: var(--black-color);
  }

  .about-hero-title {
    font-size: 36px;
  }
  .history-title,
  .team-title {
    font-size: 32px;
  }

    .history-text {
width: 100%;
font-size: 16px;
  }
}

/* mobile screen */
@media (max-width: 768px) {
  /* Navbar */
  .navbar-nav {
    gap: 1px;
  }
  .navbar-nav a:hover {
    color: var(--black-color);
  }

  .about-hero-title {
    font-size: 28px;
  }


  .history-title,
  .team-title {
    font-size: 26px;
  }

  .history-text {

  }

  .value-card {
    text-align: center;
  }
  .history-div img {
display: none;
}
}


/* Work on contact */

